--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.4",
+    "redux-mock-store": "^1.5.4",
     "sync-storage": "^0.4.2"
   },
   "devDependencies": {
